# GameOfLife

./: .gitignore  CMakeLists.txt  benchmark-times.txt  conanfile.py  gl3w_gen.py  imgui_demo.cpp  startvs.bat
src/: ImplGameOfLife.cpp  ImplGameOfLife.h  ImplGameOfLife_Contiguous.cpp  ImplGameOfLife_Contiguous.h  TestUtils.h  ThreadUtils.h  main-console.cpp  main-gui.cpp  main.cpp
test/: CMakeLists.txt  main.cpp
